--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Arquitetura</title>
+  <title>Studio CL Arquitetura</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
-
+  <link href="pricing.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <img class="navbar-left js-scroll-trigger" href="#page-top" style="height:100px" src="img/logos/logotipo rosa.png" alt="">
+      <a class="nav-link js-scroll-trigger" href="#page-top"> <img class="navbar-left js-scroll-trigger"style="height:100px" src="img/logos/logotipo rosa.png" alt=""></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -44,7 +44,10 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfólio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Planos</a>
+            <a class="nav-link js-scroll-trigger" href="#planos">Planos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#tabelaDeValores">Tabela de Valores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Equipe</a>
@@ -73,23 +76,23 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Serviços</h2>
-          <h3 class="section-subheading text-muted">Descrição geral dos serviços.</h3>
+          <h2 class="section-heading text-uppercase">Nossos Serviços</h2>
+          <h3 class="section-subheading text-muted">Mude seu ambiente!</h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-bath fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Projeto Perosonalizado</h4>
+          <h4 class="service-heading">Projeto Personalizado</h4>
           <p class="text-muted">Vamos entender seu estilo e oque deseja, e partir para a criação do seu projeto, nos envie fotos, medidas e inspirações. Estaremos sempre em contato com você durante todo o processo de criação, 100% online!</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-home fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Consultoria</h4>
           <p class="text-muted">Você que mudar os ambientes da sua casa, mas não tem tempo e nem condições de gastar com um projeto no momento? Então a consultoria é o pacote perfeito para você! Nos desenvolvemos um guia de reforma com sugestões para o ambiente.</p>
@@ -97,7 +100,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-building fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Projeto Premium</h4>
           <p class="text-muted">Para você que precisa de um projeto para a casa completa! Com a compra de um pacote de todos os ambientes, temos descontos!</p>
@@ -204,88 +207,116 @@
     </div>
   </section>
 
-  <!-- About -->
-  <section class="page-section" id="about">
+  <!-- Planos -->
+  <section class="page-section" id="planos">
+
+
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase">Planos</h2>
+        <h3 class="section-subheading text-muted">Escolha o plano mais adequado para suas necessidades.</h3>
+      </div>
+    </div>
+
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Planos</h2>
-          <h3 class="section-subheading text-muted">Escolha o plano que melhor se enquadra no seu perfil e desejo, veja o orçamento e contrate.</h3>
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Consultoria</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">R$300 <small class="text-muted"> <br/>ou 3x de R$100</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Inclui:</li>
+              <li>Layout</li>
+              <li>Moodboard</li>
+              <li>Lista de compras</li>
+              <li>Atendimento individual via skype ou e-mail</li>
+            </ul>
+            <a class="nav-link js-scroll-trigger" href="#contact"><button type="button" class="btn btn-lg btn-block btn-primary">Entre em contato</button></a>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Projeto Personalizado</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">Valores  <br/><small class="text-muted">por ambiente</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Inclui:</li>
+              <li>Planta baixa</li>
+              <li>Layout Humanizado</li>
+              <li>Projeto 3d</li>
+              <li>Projeto Executivo</li>
+              <li>Lista de compras</li>
+              <li>Um pedido de revisão</li>
+              <li>Atendimento individual via Skype, e-mail ou Whatsapp</li>
+            </ul>
+            <a class="nav-link js-scroll-trigger" href="#tabelaDeValores"><button type="button" class="btn btn-lg btn-block btn-primary">Saiba Mais</button></a>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Projeto Premium</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">Entre<br/><small class="text-muted">em contato</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Para você que precisa de um projeto para a casa completa!</li>
+              <li>Com a compra de um pacote de todos os ambientes temos descontos</li>
+              <li>Para quem deseja um projeto diferenciado, não só residencial</li>
+            </ul>
+            <a class="nav-link js-scroll-trigger" href="#contact"><button type="button" class="btn btn-lg btn-block btn-primary">Obtenha um orçamento</button></a>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Consultoria</h4>
-                  <h4 class="subheading">R$300,00 a vista, ou 3x R$100,00</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Inclui Layout, Moodboard, Lista de compras, Atendimento via Skype e e-mail</p>
-                  <p class="text-muted"> Prazo de 10 dias úteis</p>
-                  
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Projeto Personalizado</h4>
-                  <h4 class="subheading">Ajuda a oerganizar suas idéias e necessidades deixando o ambiente funcional</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Inclui: Planta baixa, Layout humanizado, Projeto 3d e executivo, lista de compras</p>
-                  <p class="text-muted">E também: um pedido de revisão</p>
-                  <p class="text-muted">Prazo de 25 dias úteis</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
+
+</section>
+
+  <!-- Tabela de Valores-->
+  <section class="page-section" id="tabelaDeValores">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading text-uppercase">Valores Por ambiente</h2>
+              <h3 class="section-subheading text-muted">Veja os valores por ambiente para nossos projetos personalizados.</h3>
+            </div>
+          </div>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Ambiente</th>
+            <th scope="col">Valor</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Quarto, Sala de Estar ou Sala de Jantar</th>
+            <td>R$ 500,00</td>
+          </tr>
+          <tr>
+            <th scope="row">Closet ou Escritório</th>
+            <td>R$ 450,00</td>
+          </tr>
+          <tr>
+            <th scope="row">Banheiro ou Lavanderia</th>
+            <td colspan="2">R$ 250,00</td>
+          </tr>
+          <tr>
+            <th scope="row">Lavabo ou Dispensa</th>
+            <td colspan="2">R$ 150,00</td>
+          </tr>
+          <tr>
+            <th scope="row">Cozinha</th>
+            <td colspan="2">R$ 650,00</td>
+          </tr>
+          <tr>
+            <th scope="row">Área, Gourmet ou Social</th>
+            <td colspan="2">R$ 600,00</td>
+          </tr>
+        </tbody>
+      </table>
+      <a class="nav-link js-scroll-trigger" href="#contact"><button type="button" class="btn btn-lg btn-block btn-primary">Entre em contato</button></a>
     </div>
   </section>
 
@@ -294,7 +325,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+          <h2 class="section-heading text-uppercase">Nossa Equipe</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
@@ -380,41 +411,14 @@
     </div>
   </section>
 
-  <!-- Clients -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Contact -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Entre em contato</h2>
+          <h3 class="section-subheading text-muted">Entre em contato para obter um orçamento ou mais informações.</h3>
         </div>
       </div>
       <div class="row">
@@ -423,28 +427,28 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="name" type="text" placeholder="Seu Nome *" required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                  <input class="form-control" id="email" type="email" placeholder="Seu Email *" required="required" data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+                  <input class="form-control" id="phone" type="tel" placeholder="Seu Telefone *" required="required" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea class="form-control" id="message" placeholder="Sua Mensagem *" required="required" data-validation-required-message="Please enter a message."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar Mensagem</button>
               </div>
             </div>
           </form>
@@ -458,7 +462,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Studio CL 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -482,10 +486,10 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a href="#">Politica de Privacidade</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="#">Termos de Uso</a>
             </li>
           </ul>
         </div>
@@ -699,6 +703,24 @@
     </div>
   </div>
 
+
+
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script src="../../assets/js/vendor/popper.min.js"></script>
+  <script src="../../dist/js/bootstrap.min.js"></script>
+  <script src="../../assets/js/vendor/holder.min.js"></script>
+  <script>
+    Holder.addTheme('thumb', {
+      bg: '#55595c',
+      fg: '#eceeef',
+      text: 'Thumbnail'
+    });
+  </script>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
