--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Studio CL</div>
-        <div class="intro-heading text-uppercase">Transforme seu sonho em realidade</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Como funciona?</a>
+        <div class="intro-heading text-uppercase">Studio CL</div>
+        <div class="intro-lead-in">Comprometimento com o seu conforto</div>
       </div>
     </div>
   </header>
@@ -77,7 +76,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Nossos Serviços</h2>
-          <h3 class="section-subheading text-muted">Mude seu ambiente!</h3>
+          <h3 class="section-subheading text-muted">Renove seu ambiente!</h3>
         </div>
       </div>
       <div class="row text-center">
