Mudanças no layout de contato

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
+        
         <div class="intro-heading text-uppercase">Studio CL</div>
         <div class="intro-lead-in">Comprometimento com o seu conforto</div>
       </div>
@@ -426,21 +427,21 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Seu Nome *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="name" type="text" placeholder="Seu Nome *" required="required" data-validation-required-message="Por favor preencha seu nome.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Seu Email *" required="required" data-validation-required-message="Please enter your email address.">
+                  <input class="form-control" id="email" type="email" placeholder="Seu Email *" required="required" data-validation-required-message="Por favor preencha seu e-mail.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Seu Telefone *" required="required" data-validation-required-message="Please enter your phone number.">
+                  <input class="form-control" id="phone" type="tel" placeholder="Seu Telefone *" required="required" data-validation-required-message="Por favor preencha seu telefone de contato.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Sua Mensagem *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea class="form-control" id="message" placeholder="Sua Mensagem *" required="required" data-validation-required-message="Por favor insira sua mensagem."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
@@ -452,6 +453,13 @@
             </div>
           </form>
         </div>
+      </div>
+      <div>
+        <br/>
+        <h2 class="section-heading text-uppercase">Informações para contato</h2>
+        <h3 class="section-heading ">Telefone Fixo: (11) 8888 8888</h3>
+        <h3 class="section-heading ">Whatsapp: (11) 1234 5678</h3>
+        <h3 class="section-heading ">E-mail: teste@teste.com</h3>
       </div>
     </div>
   </section>
