Interface da masthead refeita

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -64,9 +64,10 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        
+        <div class="intro-box">
         <div class="intro-heading text-uppercase">Studio CL</div>
         <div class="intro-lead-in">Comprometimento com o seu conforto</div>
+      </div>
       </div>
     </div>
   </header>
