--- a/index.html
+++ b/index.html
@@ -73,43 +73,53 @@
   </header>
 
   <!-- Services -->
+  <!-- Services -->
   <section class="page-section" id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Nossos Serviços</h2>
-          <h3 class="section-subheading text-muted">Renove seu ambiente!</h3>
+          <h2 class="section-heading text-uppercase">Como funciona?</h2>
+          <h3 class="section-subheading text-muted">Entenda nosso trabalho</h3>
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-bath fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Projeto Personalizado</h4>
-          <p class="text-muted">Vamos entender seu estilo e oque deseja, e partir para a criação do seu projeto, nos envie fotos, medidas e inspirações. Estaremos sempre em contato com você durante todo o processo de criação, 100% online!</p>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-home fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Consultoria</h4>
-          <p class="text-muted">Você que mudar os ambientes da sua casa, mas não tem tempo e nem condições de gastar com um projeto no momento? Então a consultoria é o pacote perfeito para você! Nos desenvolvemos um guia de reforma com sugestões para o ambiente.</p>
+          <h4 class="service-heading">Escolha o seu plano</h4>
+          <p class="text-muted">Seja um projeto pequeno ou uma renovação total, <b>temos o plano perfeito para você.</b> Escolha o plano que mais se encaixa nas suas necessidades e entre em contato para obter um orçamento!</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-building fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-users fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Projeto Premium</h4>
-          <p class="text-muted">Para você que precisa de um projeto para a casa completa! Com a compra de um pacote de todos os ambientes, temos descontos!</p>
+          <h4 class="service-heading">Você participa</h4>
+          <p class="text-muted">Entre em contato, e vamos entender seu estilo, sua idéia e partir para a criação do seu projeto! Nos envie fotos, medidas e inspirações, e <b>realizaremos sua visão</b>. </p>
+        </div>
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Fazemos nossa mágica</h4>
+          <p class="text-muted">Quando tivermos certeza de ter entendido sua visão, entraremos em ação para criar seu projeto, <b>sempre em contato</b> com você para realizar ajustes. Veja <b>Imagens em 3d</b> do seu projeto para ter certeza que é isso que você queria!</p>
+        </div>
+        <div class="col-md-3">
+         <span class="fa-stack fa-4x">
+        <i class="fas fa-circle fa-stack-2x text-primary"></i>
+        <i class="fas fa-trophy fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">Os toques Finais</h4>
+        <p class="text-muted">Após a aprovação do projeto, te enviaremos o projeto final e <b>pode contar conosco</b> mesmo após a entrega! Sempre estaremos dispostas a ajudar.</p>
         </div>
       </div>
     </div>
   </section>
 
+  
   <!-- Portfolio Grid -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
